cfn/mgmtvpc/MgmtVPC/output/vpc-management.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: Provides networking configuration for a standard management VPC (qs-1nb14cqcg)
Metadata:
    AWS::CloudFormation::Interface:
        ParameterGroups:
        -   Label:
                default: Region Config
            Parameters:
            - pRegionAZ1Name
            - pRegionAZ2Name
        -   Label:
                default: Management VPC Configuration
            Parameters:
            - pManagementVPCName
            - pManagementCIDR
            - pManagementDMZSubnetACIDR
            - pManagementDMZSubnetBCIDR
            - pVPCTenancy
        -   Label:
                default: AWS Quick Start Configuration
            Parameters:
            - QuickStartS3URL
            - QSS3BucketName
            - QSS3KeyPrefix
        ParameterLabels:
            pManagementVPCName:
                default: Name of Management VPC to create
            pManagementCIDR:
                default: CIDR block of Management VPC
            pManagementDMZSubnetACIDR:
                default: CIDR block of Management DMZ SubnetA
            pManagementDMZSubnetBCIDR:
                default: CIDR block of Management DMZ SubnetB
            pCreateNatGateway:
                default: Whether or not to create a NAT Gateway for the DMZ
            pVPCTenancy:
                default: Instance tenancy
            QuickStartS3URL:
                default: Quick Start URL
            QSS3BucketName:
                default: Quick Start S3 Bucket Name
            QSS3KeyPrefix:
                default: Quick Start S3 Key Prefix
            pCreateBastionHost:
                default: Create Bastion Host
            pEC2KeyPairBastion:
                default: Bastion KeyPair
            pBastionInstanceType:
                default: Bastion Instance Type
            pBastionAmi:
                default: Bastion AMI
    Stack:
        Value: 2
    VersionDate:
        Value: 20160510
    Identifier:
        Value: template-vpc-management
    Input:
        Description: CIDR blocks, VPC names, KeyName, EC2 instance size
    Output:
        Description: Outputs ID of all deployed resources
Parameters:
    pRegionAZ1Name:
        Description: Availability Zone 1 Name in Region
        Type: String
        Default: us-east-1b
    pRegionAZ2Name:
        Description: Availability Zone 2 Name in Region
        Type: String
        Default: us-west-1c
    pManagementVPCName:
        Description: Management VPC Name
        Type: String
        Default: Management VPC
    pManagementCIDR:
        Description: CIDR block for Management VPC
        Type: String
        Default: 10.10.0.0/16
    pManagementDMZSubnetACIDR:
        Description: CIDR block for Management AZ-1a subnet
        Type: String
        Default: 10.10.10.0/24
    pManagementDMZSubnetBCIDR:
        Description: CIDR block for Management AZ-1b subnet
        Type: String
        Default: 10.10.20.0/24
    pManagementPrivateSubnetACIDR:
        Description: CIDR block for Management AZ-1a subnet
        Type: String
        Default: 10.10.10.0/24
    pManagementPrivateSubnetBCIDR:
        Description: CIDR block for Management AZ-1b subnet
        Type: String
        Default: 10.10.20.0/24
    pCreateNatGateway:
        Description: Whether to create a NAT Gateway
        Type: String
        Default: false
    pVPCTenancy:
        Description: Instance tenancy behavior for this VPC
        Type: String
        Default: default
        AllowedValues:
        - default
        - dedicated
    pEnvironment:
        Description: Environment (development, test, or production)
        Type: String
        Default: development
    pFlowLogGroup:
        Description: Log Group for capturing VPC Flow Logs
        Type: String
        Default: ''
    QuickStartS3URL:
        Description: Quick Start S3 URL prefix.
        Default: https://s3.amazonaws.com
        Type: String
    QSS3BucketName:
        AllowedPattern: "^[0-9a-zA-Z]+([0-9a-zA-Z\\-\\.]*[0-9a-zA-Z])*$"
        ConstraintDescription: Quick Start bucket name can include numbers, lowercase letters, uppercase letters, periods (.), and hyphens (-). It cannot start or end with a hyphen (-).
        Default: quickstart-reference
        Description: S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, periods (.), and hyphens (-). It cannot start or end with a hyphen (-).
        Type: String
    QSS3KeyPrefix:
        AllowedPattern: "^[0-9a-zA-Z-]+(/[0-9a-zA-Z-]+)*$"
        ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.
        Default: quickstart-enterprise-accelerator-nist
        Description: S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.
        Type: String
Conditions:
    cEnableFlowLogs: !Not [ !Equals [ !Ref pFlowLogGroup, '' ] ]
    cCreateNatGateway: !Equals [ true, !Ref pCreateNatGateway ]
Resources:
    rVPCManagement:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref pManagementCIDR
            InstanceTenancy: !Ref pVPCTenancy
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: !Ref pManagementVPCName
    SecurityGroupsTemplate:
        Type: AWS::CloudFormation::Stack
        DependsOn:
        - rVPCManagement
        Properties:
            Parameters:
                pVpcId: !Ref rVPCManagement
                pManagementCIDR: !Ref pManagementCIDR
                pEnvironment: !Ref pEnvironment
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: SecurityGroupsTemplate
            TemplateURL: https://s3.amazonaws.com/org.linuxjedi.raws/MgmtVPC/securitygroups.yaml
    rRouteMgmtNGW:
        Condition: cCreateNatGateway
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref rRouteTableMgmtPrivate
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref rNATGateway
    rManagementDMZSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementDMZSubnetACIDR
            AvailabilityZone: !Ref pRegionAZ1Name
            VpcId: !Ref rVPCManagement
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: Management DMZ Subnet A
            -   Key: Environment
                Value: !Ref pEnvironment
    rManagementDMZSubnetB:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementDMZSubnetBCIDR
            AvailabilityZone: !Ref pRegionAZ2Name
            VpcId: !Ref rVPCManagement
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: Management DMZ Subnet B
            -   Key: Environment
                Value: !Ref pEnvironment
    rManagementPrivateSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementPrivateSubnetACIDR
            AvailabilityZone: !Ref pRegionAZ1Name
            VpcId: !Ref rVPCManagement
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: Management Private Subnet A
            -   Key: Environment
                Value: !Ref pEnvironment
    rManagementPrivateSubnetB:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementPrivateSubnetBCIDR
            AvailabilityZone: !Ref pRegionAZ2Name
            VpcId: !Ref rVPCManagement
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: Management Private Subnet B
            -   Key: Environment
                Value: !Ref pEnvironment
    rIGWManagement:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: igw-management
            -   Key: Environment
                Value: !Ref pEnvironment
    rRouteTableMgmtPrivate:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref rVPCManagement
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: Management Private Route
            -   Key: Environment
                Value: !Ref pEnvironment
    rRouteTableMgmtDMZ:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref rVPCManagement
            Tags:
            -   Key: Creator
                Value: parsley@linuxjedi.org
            -   Key: Project
                Value: LinuxJedi
            -   Key: Repository
                Value: github.com/parsley/aws-linuxjedi
            -   Key: Name
                Value: Management DMZ Route
            -   Key: Environment
                Value: !Ref pEnvironment
    rEIPProdNAT:
        Type: AWS::EC2::EIP
        Condition: cCreateNatGateway
        Properties:
            Domain: vpc
    rNATGateway:
        Type: AWS::EC2::NatGateway
        Condition: cCreateNatGateway
        DependsOn: rIGWManagement
        Properties:
            AllocationId: !GetAtt rEIPProdNAT.AllocationId
            SubnetId: !Ref rManagementDMZSubnetA
    rGWAttachmentMgmtIGW:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId: !Ref rVPCManagement
            InternetGatewayId: !Ref rIGWManagement
    rRouteMgmtIGW:
        DependsOn:
        - rGWAttachmentMgmtIGW
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref rRouteTableMgmtDMZ
            GatewayId: !Ref rIGWManagement
            DestinationCidrBlock: 0.0.0.0/0
    rRouteAssocMgmtDMZA:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtDMZ
            SubnetId: !Ref rManagementDMZSubnetA
    rRouteAssocMgmtDMZB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtDMZ
            SubnetId: !Ref rManagementDMZSubnetB
    rRouteAssocMgmtPrivA:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtPrivate
            SubnetId: !Ref rManagementPrivateSubnetA
    rRouteAssocMgmtPrivB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtPrivate
            SubnetId: !Ref rManagementPrivateSubnetB
    rManagementVpcFlowLogsServiceRole:
        Condition: cEnableFlowLogs
        Type: AWS::IAM::Role
        Properties:
            AssumeRolePolicyDocument:
                Version: 2012-10-17
                Statement:
                -   Sid: AllowFlowLogs
                    Effect: Allow
                    Principal:
                        Service: vpc-flow-logs.amazonaws.com
                    Action: sts:AssumeRole
            Path: "/"
            Policies:
            -   PolicyName: cloudwatchlogsrole
                PolicyDocument:
                    Version: 2012-10-17
                    Statement:
                    -   Action:
                        - logs:CreateLogGroup
                        - logs:CreateLogStream
                        - logs:PutLogEvents
                        - logs:DescribeLogGroups
                        - logs:DescribeLogStreams
                        Effect: Allow
                        Resource: "*"
    rManagementVpcFlowLog:
        Condition: cEnableFlowLogs
        Type: AWS::EC2::FlowLog
        Properties:
            DeliverLogsPermissionArn: !GetAtt rManagementVpcFlowLogsServiceRole.Arn
            LogGroupName: !Ref pFlowLogGroup
            ResourceId: !Ref rVPCManagement
            ResourceType: VPC
            TrafficType: ALL
    rManagementVpcFlowLogStream:
        Condition: cEnableFlowLogs
        Type: AWS::Logs::LogStream
        Properties:
            LogGroupName: !Ref pFlowLogGroup
Outputs:
    rVPCManagement:
        Value: !Ref rVPCManagement
    rManagementDMZSubnetA:
        Value: !Ref rManagementDMZSubnetA
    rManagementDMZSubnetB:
        Value: !Ref rManagementDMZSubnetB
    rManagementPrivateSubnetA:
        Value: !Ref rManagementPrivateSubnetA
    rManagementPrivateSubnetB:
        Value: !Ref rManagementPrivateSubnetB
    rRouteTableMgmtPrivate:
        Value: !Ref rRouteTableMgmtPrivate
    rRouteTableMgmtDMZ:
        Value: !Ref rRouteTableMgmtDMZ
